hphp/hack/test/typecheck/default_with_type_error.php.exp
File "default_with_type_error.php", line 10, characters 9-14:
Typing error (Typing[4110])
File "default_with_type_error.php", line 10, characters 9-10:
This is a num (int/float) because this is used in an arithmetic operation
File "default_with_type_error.php", line 7, characters 19-21:
It is incompatible with a string
